@@ -1,3 +1,8 @@
+2004-04-27  Kevin Turner  <kevin@freegeek.org>
+
+	* fgdiag/modem/modem.py (find_speed, get_serial_devices): 1.3 document
+	return values.
+
 2004-04-08  Kevin Turner  <kevin@freegeek.org>
 
 	* fgdiag/modem/test_modem.py (ResponseParser.test_find_speed): 1.1
